# orbitersdk-cpp

./: .gitignore  CMakeLists.txt  transactionhash
cmake/: FindEVMOne.cmake  FindEvmc.cmake
local_testnet_snapshot/local_testnet_normal1/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_normal2/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_normal3/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_normal4/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_normal5/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_normal6/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_validator1/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_validator2/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_validator3/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_validator4/blockchain/database/: IDENTITY  LOG
local_testnet_snapshot/local_testnet_validator5/blockchain/database/: IDENTITY  LOG  OPTIONS-000007
proto/: abci-types.proto  crypto-keys.proto  crypto-proof.proto  types-params.proto  types-validator.proto  vm.proto
proto/tendermint/abci/: types.proto
proto/tendermint/types/: validator.proto
scripts/: AIO-setup.sh  resetOptions.sh  resetToSnapshot.sh  startNodes.sh  updateBinaries.sh
src/: abci.cpp  abci.h  bench.h  main-cosmos.cpp  main.cpp
src/bins/: CMakeLists.txt
src/bins/network-sim/: CMakeLists.txt  main.cpp
src/bins/network-sim/src/: common.h  networksimulator.cpp  networksimulator.h  simulatorworker.cpp  simulatorworker.h
src/bins/orbitersdkd/: CMakeLists.txt  main-cpp.cpp  main-evm.cpp  main.cpp
src/bins/rollup-faucet/: CMakeLists.txt  main.cpp
src/bins/rollup-faucet/src/: faucetmanager.cpp  faucetmanager.h
src/bins/rollup-validator/: CMakeLists.txt  main.cpp
src/bins/rollup-validator/src/: signermanager.cpp  signermanager.h
src/contract/: CMakeLists.txt  abi.h  contract.cpp  contract.h  contractmanager.cpp  contractmanager.h  customcontracts.h  event.h
src/contract/templates/: erc20.cpp  erc20.h  erc721.cpp  erc721.h  erc721mint.cpp  erc721mint.h
src/contract/templates/dexv2/: dexv2pair.cpp  dexv2pair.h  dexv2router02.cpp  uq112x112.h
src/core/: CMakeLists.txt  block.cpp  ecrecoverprecompile.cpp  ecrecoverprecompile.h  ecrecoverprecompile.hpp  evmhost.cpp  evmhost.h  evmhost.hpp  mock_host.hpp  rdpos.cpp  state.cpp  state.h  storage.cpp  storage.h  utils.cpp  utils.h
src/net/: CMakeLists.txt
src/net/http/: httpclient.cpp  httpclient.h  httplistener.cpp  httplistener.h  httpparser.cpp  httpparser.h  httpserver.cpp  httpserver.h  httpsession.cpp  httpsession.h
src/net/http/jsonrpc/: decoding.cpp  encoding.cpp  encoding.h  methods.h
src/net/p2p/: managerbase.cpp  managerbase.h  managerdiscovery.h  managernormal.cpp  managernormal.h
src/utils/: block.cpp  block.h  contractreflectioninterface.h  db.h  logger.h  options.cpp  options.h.in  randomgen.cpp  randomgen.h  strings.cpp  strings.h  tx.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  sdktestsuite.hpp
tests/contract/: abi.cpp  contractmanager.cpp  erc20wrapper.cpp  erc721mint.cpp
tests/core/: evmhost.cpp  rdpos.cpp  state.cpp  storage.cpp
tests/net/http/: httpjsonrpc.cpp
tests/net/p2p/: p2p.cpp
tests/utils/: options.cpp
